Design datagrid view for Address book- customized and removed defaults

--- a/src/XelsDesktopWalletApp/Views/AddressBook.xaml
+++ b/src/XelsDesktopWalletApp/Views/AddressBook.xaml
@@ -141,15 +141,15 @@
 
                 <Grid Margin="0,60,0,0" x:Name="ListData">
                     <DataGrid x:Name="AddressList" AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Top" 
-                              Width="900" FontSize="12" BorderThickness="1" BorderBrush="Gray" RowHeight="30"
-                              Background="LightGray" >
-                        <DataGrid.Columns>
+                              Width="900" FontSize="12" BorderThickness="0" RowHeight="40"
+                              Background="LightGray" HeadersVisibility="None" GridLinesVisibility="None" IsReadOnly="True" >
+                        <DataGrid.Columns >
                             <DataGridTextColumn Binding="{Binding Path=label}" IsReadOnly="True" Width="200" />
-                            <DataGridTextColumn Binding="{Binding Path=address}" IsReadOnly="True" Width="550"  />
+                            <DataGridTextColumn Binding="{Binding Path=address}" IsReadOnly="True" Width="500"  />
                             <DataGridTemplateColumn Width="150">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" Margin="1 0 0 0" VerticalAlignment="Center">
+                                        <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" Margin="1 0 0 0" VerticalAlignment="Top">
                                             <InlineUIContainer>
                                                 <Button Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"  
                                                     Content="Send" Click="SendButton_Click" Padding="5 0 5 0" />
@@ -163,6 +163,11 @@
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
                         </DataGrid.Columns>
+                        <DataGrid.CellStyle>
+                            <Style TargetType="DataGridCell">
+                                <Setter Property="Margin" Value="50,10,0,0"/>
+                            </Style>
+                        </DataGrid.CellStyle>
                     </DataGrid>
                 </Grid>
 
