Code and Design Refactor: hybrid pow-pos mining panel connection info panel integrate pow mining api balance panel

--- a/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -70,7 +70,13 @@
                 </Button>
 
             </Grid>
+        <Grid Background="#FFCFCFCF">
+            <ScrollViewer>
+                <Frame x:Name="PageContent" />
 
-        </StackPanel>
+            </ScrollViewer>
+        </Grid>
+    </StackPanel>
+    
     <!--</Border>-->
 </Window>
