--- a/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
+++ b/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
@@ -142,7 +142,7 @@
                     </Grid>
                 </Button>
 
-                <Button Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C">
+                <Button x:Name="btn_Exchange" Click="btn_Exchange_Click" Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C">
                     <Grid Width="150">
                         <materialDesign:PackIcon Kind="FindReplace" VerticalAlignment="Center"/>
                         <TextBlock HorizontalAlignment="Right" Text="EXCHANGE" FontFamily="Champagne &amp; Limousines" Margin="0,0,39,0"/>
